# sparkly-fx-legacy

./: .gitmodules  CMakeLists.txt  README.md  Sparkly FX.sln
Source/: Base.cpp  Base.h  CDraw.cpp  CDraw.h  CMat.cpp  CSignature.cpp  CSignature.h  Controls.cpp  Controls.h  DLLMain.cpp  Dev Tools.cpp  Dev Tools.h  Draw utils.h  DrawModelExecute.cpp  DrawModelExecute.h  Engine.h  Entity enums.h  Entity.h  FrameStageNotify.cpp  KeyValues.h  Materials.h  Menu.cpp  Netvars.cpp  Netvars.h  Offsets.h  Panels.cpp  SparklyFX.vcxproj  SparklyFX.vcxproj.filters  Styles.cpp  VGUI.h  VMTHooks.h  Vector.h  Visuals.cpp  Visuals.h
src/: Base.cpp  Base.h  CDraw.cpp  CDraw.h  CMakeLists.txt  CMat.h  Clipboard.cpp  Clipboard.h  Color.h  Controls.cpp  Controls.h  DLLMain.cpp  Draw utils.h  DrawModelExecute.cpp  DrawModelExecute.h  Entity enums.h  FrameStageNotify.cpp  FrameStageNotify.h  Icons.h  KeyEnum.h  Materials.h  Menu.cpp  Menu.h  Netvars.cpp  Netvars.h  Offsets.h  Panels.cpp  Styles.cpp  Visuals.cpp  Visuals.h
src/sdk/: Engine.h  Entity.h  IMaterialProxy.h  Vector2.h  studio.h
src/util/: CMakeLists.txt  CSignature.cpp  MyVMT.cpp  MyVMT.h  VMTHooks.cpp  VMTHooks.h
